[tool.poetry]
name = "pydantic-gitlab-webhooks"
version = "0.1.5"
description = "Pydantic models for GitLab webhook payloads"
authors = [
  "Rich Wareham <rich.pydantic-gitlab-webhooks@richwareham.com>"
]
license = "MIT"
readme = "README.md"

[tool.poetry.urls]
homepage = "https://github.com/rjw57/pydantic-gitlab-webhooks"
repository = "https://github.com/rjw57/pydantic-gitlab-webhooks.git"
issues = "https://github.com/rjw57/pydantic-gitlab-webhooks/issues"
changelog = "https://github.com/rjw57/pydantic-gitlab-webhooks/blob/main/CHANGELOG.md"

  [tool.poetry.dependencies]
  python = "^3.10"
  python-dateutil = "^2.9.0.post0"

    [tool.poetry.dependencies.pydantic]
    extras = [ "email" ]
    version = "^2.9.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-cov = "^6.0.0"
faker = "^33.0.0"

[tool.pytest.ini_options]
addopts = "--cov --cov-report term --cov-report html"

[tool.mypy]
ignore_missing_imports = true

[tool.black]
line-length = 99

[tool.coverage.run]
omit = [ "*/test/*", "*/tests/*" ]

[tool.isort]
profile = "black"

[build-system]
requires = [ "poetry-core" ]
build-backend = "poetry.core.masonry.api"
