[tool.poetry]
name = "pydantic-gitlab-webhooks"
version = "0.3.27"
description = "Pydantic models for GitLab webhook payloads"
authors = [
  "Rich Wareham <rich.pydantic-gitlab-webhooks@richwareham.com>"
]
license = "MIT"
readme = "README.md"

  [tool.poetry.urls]
  Homepage = "https://github.com/rjw57/pydantic-gitlab-webhooks"
  Repository = "https://github.com/rjw57/pydantic-gitlab-webhooks.git"
  Issues = "https://github.com/rjw57/pydantic-gitlab-webhooks/issues"
  Changelog = "https://github.com/rjw57/pydantic-gitlab-webhooks/blob/main/CHANGELOG.md"
  Documentation = "https://rjw57.github.io/pydantic-gitlab-webhooks"

  [tool.poetry.dependencies]
  python = "^3.10"
  python-dateutil = "^2.9.0.post0"

    [tool.poetry.dependencies.pydantic]
    extras = [ "email" ]
    version = "^2.9.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-cov = "^6.0.0"
faker = "^35.0.0"

[tool.poetry.group.doc.dependencies]
mkdocs = "^1.6.1"
mkdocs-material = "^9.5.44"
black = "^25.0.0"

  [tool.poetry.group.doc.dependencies.mkdocstrings]
  extras = [ "python" ]
  version = "^0.27.0"

[tool.pytest.ini_options]
addopts = "--cov --cov-report term --cov-report html"

[tool.mypy]
ignore_missing_imports = true

[tool.black]
line-length = 99

[tool.coverage.run]
omit = [ "*/test/*", "*/tests/*" ]

[tool.isort]
profile = "black"

[build-system]
requires = [ "poetry-core" ]
build-backend = "poetry.core.masonry.api"
